--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -117,30 +117,28 @@
             ) }}
           </p>
 
-        {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-          {{
-            repaymentPlanBlock(
-              heading = 'How they want to pay',
-              repaymentPlan = claim.response.paymentIntention.repaymentPlan
-            )
-          }}
-        {% endif %}
-
-        {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
-
-        {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
-
-      {% endif %}
-
-      {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-        {% if page === 0 %}
-          <p>{{ t('{{ defendantName }} admits they owe you {{ amount }}. They don’t believe they owe the full amount claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
-          <p>
+          {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
             {{
-              paymentIntentionFragment(
-                amount = claim.response.amount,
-                paymentIntention = claim.response.paymentIntention
-              ) }}
+              repaymentPlanBlock(
+                heading = 'How they want to pay',
+                repaymentPlan = claim.response.paymentIntention.repaymentPlan
+              )
+            }}
+          {% endif %}
+
+          {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+
+          {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
+        {% endif %}
+        {% if claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+          {% if page === 0 %}
+            <p>{{ t('{{ defendantName }} admits they owe you {{ amount }}. They don’t believe they owe the full amount claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
+            <p>
+              {{
+                paymentIntentionFragment(
+                  amount = claim.response.amount,
+                  paymentIntention = claim.response.paymentIntention
+                ) }}
             </p>
 
             <h2 class="heading-medium">{{ t('Their defence') }}</h2>
@@ -155,29 +153,26 @@
             </div>
             {% endif %}
 
-          {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
-            {{ evidenceFragment(claim.response.evidence) }}
-          {% endif %}
-          {{ fullResponseFragment() }}
-        {% elseif page === 1 %}
-          {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-            <p>{{ t('The defendant suggested this repayment plan:') }}</p>
-            {{ repaymentPlanBlock(repaymentPlan = claim.response.paymentIntention.repaymentPlan) }}
-
-          {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-
-              {{paymentIntentionFragment(
+            {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
+              {{ evidenceFragment(claim.response.evidence) }}
+            {% endif %}
+            {{ fullResponseFragment() }}
+          {% elseif page === 1 %}
+            {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+              <p>{{ t('The defendant suggested this repayment plan:') }}</p>
+              {{ repaymentPlanBlock(repaymentPlan = claim.response.paymentIntention.repaymentPlan) }}
+            {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+              {{ paymentIntentionFragment(
                 amount = claim.response.amount,
                 paymentIntention = claim.response.paymentIntention
               ) }}
             {% endif %}
 
             {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
-          {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
-
+            {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
           {% endif %}
         {% endif %}
-        {% else %}
+      {% else %}
           <p>{{ t('{{ defendantName }} has rejected the claim.', { defendantName: defendantName}) }}</p>
 
           <h2 class="heading-medium">{{ t('Their defence') }}</h2>
