--- a/src/main/common/components/free-mediation/howFreeMediationWorks.njk
+++ b/src/main/common/components/free-mediation/howFreeMediationWorks.njk
@@ -7,7 +7,7 @@
     <p>{{ t('If we get through, we’ll try to arrange a phone call with a mediator from the Small Claims Mediation Service.') }}</p>
   {% endif %}
 
-  <h2 class="heading-medium">{{ t('A mediator phones youq') }}</h2>
+  <h2 class="heading-medium">{{ t('A mediator phones you') }}</h2>
 
   <p>{{ t('The mediator will:') }}</p>
   <ul class="list list-bullet">
