--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -67,7 +67,14 @@
       {% elseif repaymentPlanOrigin === 'COURT' %}
         {% include "./confirmation/court-suggested-payment-plan.njk" %}
       {% elseif claim.claimantResponse.type === ClaimantResponseType.ACCEPTATION %}
-        <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.') }}</p>
+        {% if claim.response.responseType === ResponseType.PART_ADMISSION.value and claim.response.paymentIntention.paymentOption === PaymentOption.IMMEDIATELY %}
+          <p>{{ t('The defendant said they’ll pay you {{ amount }} immediately.', { amount: claim.response.amount | numeral }) }}</p>
+          <p>{{ t('They must make sure you have the money by {{ paymentDate }}. Any cheques or transfers should be clear in your account.',
+              { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
+          <p>{{ t('You need to tell us if you’ve settled the claim, for example because the defendant has paid you.') }}</p>
+        {% else %}
+          <p>{{ t('The claim is now settled. We’ll email the defendant {{ claim.claimData.defendant.name }} to tell them.') }}</p>
+        {% endif %}
       {% elseif claim.claimantResponse.freeMediation === YesNoOption.YES %}
         <p>{{ t('You agreed to try to resolve the claim using mediation.') }}</p>
         <p>{{ t('A mediator will contact you and the defendant in the next 14 days to arrange an appointment.') }}</p>
