--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -49,7 +49,9 @@
           bold = true
         )
         }}
-        {% if mediationDraft.youCanOnlyUseMediation %}
+        {% if mediationDraft.youCanOnlyUseMediation
+          and mediationDraft.willYouTryMediation.option === 'yes'
+          and not ( mediationDraft.youCanOnlyUseMediation.option === 'yes' and mediationDraft.willYouTryMediation.option === 'yes' ) %}
           {{
           row(
             label = 'Do you agree to the mediation conditions?',
