--- a/src/main/features/directions-questionnaire/views/self-witness.njk
+++ b/src/main/features/directions-questionnaire/views/self-witness.njk
@@ -19,7 +19,7 @@
             </span>
           </legend>
 
-          <p>{{ t('This could be providing written evidence or going to a hearing at the court.') }}</p>
+          <p>{{ t('You could be asked to provide written evidence and go to a court hearing.') }}</p>
           {% if error %}<span class="error-message">{{ t(error) }}</span>{% endif %}
 
           {% set name = 'option' %}
