--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -96,10 +96,10 @@
   {%  if claim.response.freeMediation === FreeMediationOption.YES %}
     <p>{{ t('We’ll ask if they want to try mediation. If they agree, we’ll contact you with an appointment.') }}</p>
     <p>{{ t('If they don’t want to try mediation the court will review the case. You might have to go to a hearing.') }}</p>
-    <p>{{ t('We`ll contact you to tell you what to do next.') }}</p>
+    <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
   {% else %}
     <p>{{ t('The court will review the case. You might have to go to a hearing.') }}</p>
-    <p>{{ t('We`ll contact you to tell you what to do next.') }}</p>
+    <p>{{ t('We’ll contact you to tell you what to do next.') }}</p>
     <p></p>
   {% endif %}
 {% endif %}
